--- a/package.json
+++ b/package.json
@@ -31,5 +31,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage" : "http://digitalDG.github.io/threejs-react-app"
+
 }
